--- a/index.html
+++ b/index.html
@@ -76,12 +76,14 @@
     </style>
 </head>
 <body>
-    <header>
-        <div class="header-content">
-            <h1>Haridev M</h1>
-            <p>B.Sc Computer Science Student</p>
-        </div>
-    </header>
+   <header>
+    <div class="header-content">
+        <!-- Add your image here -->
+        <img src="profile.jpg" alt="Haridev M" style="width: 150px; height: 150px; border-radius: 50%; margin-bottom: 1rem;">
+        <h1>Haridev M</h1>
+        <p>B.Sc Computer Science Student</p>
+    </div>
+</header>
 
     <nav>
         <ul>
